--- a/seumich/templates/seumich/assignment_list_table.html
+++ b/seumich/templates/seumich/assignment_list_table.html
@@ -1,55 +1,41 @@
-{% load filters %}
+{% block head %}
+{% load staticfiles %}
+  <script src='{% static 'seumich/assignment_list_table.js' %}'></script>
+  <script src='{% static 'seumich/sort_table.js' %}'></script>
+{% endblock %} {% load filters %}
 
 <table class="table table-striped">
     <thead>
         <tr>
-            <th scope="col">
-                <a href="">
-      Assignment
-      <span class="fa fa-caret-down"><span class="sr-only"> (ascending sort)</span></span>
-      <span class="fa fa-caret-up"><span class="sr-only"> (descending sort)</span></span>
-    </a>
-            </th>
-            <th scope="col">
-                <a href="">
-      Due Date
-      <span class="fa fa-caret-down"><span class="sr-only"> (descending sort)</span></span>
-      <span class="fa fa-caret-up"><span class="sr-only"> (ascending sort)</span></span>
-    </a>
-            </th>
-            <th scope="col">
-                <a class="unsortable">Points Earned/Possible</a>
-            </th>
-            <th scope="col">
-                <a class="unsortable">Student Percentage</a>
-            </th>
-            <th scope="col">
-                <a class="unsortable">Class Average</a>
-            </th>
-            <th scope="col">
-                <a class="unsortable">Grader's Comment</a>
-            </th>
+          <th scope="col" class="hide-small"><a href="#" onClick="return false;">Assignment</a></th>
+          <th scope="col" class="hide-small"><a href="#" onClick="return false;">Due Date</a></th>
+          <th scope="col" class="hide-small"><a href="#" onClick="return false;">Points Earned/Possible</a></th>
+          <th scope="col" class="hide-small"><a href="#" onClick="return false;">Student Percentage</a></th>
+          <th scope="col" class="hide-small"><a href="#" onClick="return false;">Class Average</a></th>
+          <th scope="col" class="hide-small"><a href="#" onClick="return false;">Grader's Comment</a></th>
         </tr>
     </thead>
     <tbody>
         {% for assignment in assignments %}
         <tr>
             <th scope="row">{{assignment.assignment.description}}</th>
-            <td>{{assignment.due_date }}</td>
+            <td>{% if assignment.due_date %}{{assignment.due_date.date}}{% endif %}</td>
             <td>{{assignment.points_earned|floatformat}}/{{assignment.points_possible|floatformat}}</td>
             <td>{{assignment.points_earned|divide:assignment.points_possible|multiply:100|floatformat}}%</td>
             <td>{{assignment.class_points_earned|divide:assignment.class_points_possible|multiply:100|floatformat}}%</td>
             <td class="assignment-comment-cell">
+                {% if assignment.grader_comment %}
                 <span>
-          <span>View</span><span>Hide</span> Comment
-                <a class="assignment-button" role="button">
-            {% load static %}
-            {% static "" as baseUrl %}
-            <img class="assignment-button" src="{{baseUrl}}/images/Dropdown_Plus.png" alt="Expand"/>
-            <img class="assignment-button" src="{{baseUrl}}/images/Dropdown_Minus.png" alt="Expand"/>
-          </a>
-                <p>&quot;{{assignment.grader_comment}}&quot;</p>
+                  <span id="comment-title-{{assignment.assignment.id}}">View Comment</span>
+                  <a class="assignment-button" role="button">
+                    {% load static %}
+                    {% static "" as baseUrl %}
+                    <img id="plus-button-{{assignment.assignment.id}}" class="assignment-button" src="{{baseUrl}}/images/Dropdown_Plus.png" alt="Expand"/>
+                    <img id="minus-button-{{assignment.assignment.id}}" class="assignment-button" src="{{baseUrl}}/images/Dropdown_Minus.png" alt="Expand"/>
+                  </a>
+                  <p id="assignment-grader-comment-{{assignment.assignment.id}}">&quot;{{assignment.grader_comment}}&quot;</p>
                 </span>
+                {% endif %}
             </td>
         </tr>
         {% endfor %}
