--- a/seumich/templates/seumich/advisor_detail.html
+++ b/seumich/templates/seumich/advisor_detail.html
@@ -10,7 +10,7 @@
         <h3 class="panel-title">Not Found</h3>
     </div>
     <div class="panel-body">
-        No advisor profile found ({{advisorUsername}}).
+        No advisor profile found.
     </div>
 </div>
 {% endif %} {% endblock %}
