--- a/seumich/templates/seumich/student.html
+++ b/seumich/templates/seumich/student.html
@@ -1,4 +1,11 @@
-{% extends 'index.html' %} {% block content %} {% load filters %}
+{% extends 'index.html' %}
+
+{% block head %}
+{% load staticfiles %}
+  <script src='{% static 'seumich/student.js' %}'></script>
+{% endblock %}
+
+{% block content %} {% load filters %}
 
 <div>
     <div class="student-detail-mobile">
@@ -6,16 +13,17 @@
         <hr class="main-no-margin-top" />
     </div>
 
-    <div class="student-detail-left-menu" id="student-detail-menu">
+    <div class="student-detail-left-menu">
         <div class="student-detail-left-menu-top">
             <p class="student-detail-student-name">{{student.first_name}} {{student.last_name}}</p>
             <p class="student-detail-student-email"><a href="mailto:{{student.email_address}}" class="student-detail-student-email-link">{{student.email_address}}</a></p>
         </div>
-        <div class="student-detail-left-menu-course-line" ng-click="goTo('/students/'+student.username+'/')">
+        <div class="student-detail-left-menu-course-line">
             <p>STUDENT SUMMARY</p>
+            <input type="hidden" id="student-username" value="{{ student.username }}">
         </div>
         {% for classSite in classSites %}
-        <div class="student-detail-left-menu-courses">
+        <div class="student-detail-left-menu-courses" id="student-menu-{{ classSite.code }}">
             <p>{{classSite.description}}</p>
             {% load static %} {% static "" as baseUrl %}
             <img src="{{ baseUrl }}/images/Status_Icons_{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite }}.png" width="25px"></img>
@@ -28,6 +36,5 @@
     </div>
 
 </div>
-
 
 {% endblock %}
