--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -4,9 +4,8 @@
 <div class="student-info">
     <strong><a class="unsortable">Advisors: </a></strong> {% for advisor in advisors %}
     <p class="advisor-names">
-        <a href="/advisors/{{advisor.username}}/">
-      {{ advisor.first_name }} {{ advisor.last_name }}</a>
-        <span class="glyphicon glyphicon-info-sign comma" aria-hidden="true" title="{{advisor.cohort}}" data-toggle="tooltip" data-placement="bottom" tooltip></span>
+        <a href="/advisors/{{advisor.username}}/">{{ advisor.first_name }} {{ advisor.last_name }}</a>
+        <span class="glyphicon glyphicon-info-sign comma" aria-hidden="true" title="" data-toggle="tooltip" data-placement="bottom" tooltip></span>
         <span class="sr-only">{{advisor.role}}</span>
     </p>
     {% endfor %}
