Make search bar functional, Amended class site detail page
Search bar is functional now. Class site detail page does not throw 404 exception. Layout of assignment page is dependent on whether assignments are present or not.

--- a/seumich/templates/index.html
+++ b/seumich/templates/index.html
@@ -74,10 +74,9 @@
                     </li>
                     {% endif %}
                 </ul>
-                <form action="/students/" method="post" class="navbar-form navbar-right">
-                    {% csrf_token %}
-                    <label for="student-search" class="sr-only">Search student name, uniqname, or UMID...</label>
-                    <input name="student-search" type="text" class="form-control" placeholder="Search student name, uniqname, or UMID...">
+                <form action="/students/" method="get" class="navbar-form navbar-right">
+                    <label for="search" class="sr-only">Search student name, uniqname, or UMID...</label>
+                    <input name="search" type="text" class="form-control" placeholder="Search student name, uniqname, or UMID...">
                 </form>
             </div>
         </div>
