--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -1,3 +1,5 @@
+{% load filters %}
+
 <h2 class="student-detail-summary-title">STUDENT SUMMARY</h2>
 <hr class="main-no-margin-top" />
 <div class="student-detail-summary-content">{% include 'seumich/student_class_site_list.html' %}</div>
@@ -5,8 +7,7 @@
     <strong><a class="unsortable">Advisors: </a></strong> {% for advisor in advisors %}
     <p class="advisor-names">
         <a href="/advisors/{{advisor.username}}/">{{ advisor.first_name }} {{ advisor.last_name }}</a>
-        <span class="glyphicon glyphicon-info-sign comma" aria-hidden="true" title="" data-toggle="tooltip" data-placement="bottom" tooltip></span>
-        <span class="sr-only">{{advisor.role}}</span>
+        <span class="glyphicon glyphicon-info-sign comma" aria-hidden="true" title="{{ advisor.studentcohortmentor_set.all|get_student_cohort:student }}" data-toggle="tooltip" data-placement="bottom" tooltip></span>
     </p>
     {% endfor %}
 </div>
