--- a/seumich/templates/seumich/student_class_site_list_table.html
+++ b/seumich/templates/seumich/student_class_site_list_table.html
@@ -26,7 +26,8 @@
       <th scope="row" class="class-site-title"><a href="/students/{{student.username}}/class_sites/{{classSite.code}}/">{{ classSite.description }}</a></th>
       <td>
          {% load static %} {% static "" as baseUrl %}
-         <img src="{{ baseUrl }}/images/Status_Icons_{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite }}.png" width="25px" hspace="3"></img>
+         <span data-toggle="tooltip" title="{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite|status_to_text }}" data-placement="bottom">
+         <img src="{{ baseUrl }}/images/Status_Icons_{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite }}.png" width="25px" hspace="3"></img></span>
       </td>
       <td>
         <div class="average-bar-container">
