Account for no data in templates + minor refinements
If no data is populated in templates, show an appropriate message. Other refinements include -> divs in list view of student class site detail should be clickable, add details in student page such as email address and university id.

--- a/seumich/templates/seumich/advisor_detail.html
+++ b/seumich/templates/seumich/advisor_detail.html
@@ -1,10 +1,11 @@
 {% extends 'index.html' %} {% block content %}
 
+{% if advisor %}
 <div>
     <div class="main-page-end-margin-bottom" id="load-advisor-detail">{% include 'seumich/student_list.html' %}</div>
 </div>
 
-{% if not advisor %}
+{% else %}
 <div class="panel panel-warning not-found">
     <div class="panel-heading">
         <h3 class="panel-title">Not Found</h3>
