--- a/seumich/templates/seumich/student_list.html
+++ b/seumich/templates/seumich/student_list.html
@@ -52,21 +52,37 @@
   <ul class="pagination">
       <li class="page-item">
           {% if students.has_previous %}
-          <a class="page-link" href='?page={{students.previous_page_number}}' aria-label="Previous">Previous</a>
+            {% if query_user %}
+              <a class="page-link" href='?search={{query_user}}&amp;page={{students.previous_page_number}}' aria-label="Previous">Previous</a>
+            {% else %}
+              <a class="page-link" href='?page={{students.previous_page_number}}' aria-label="Previous">Previous</a>
+            {% endif %}
           {% endif %}
       </li>
       {% for page_num in loop_times %}
         {% if page_num == students.number %}
-          <li class="page-item active"><a class="page-link" href='?page={{page_num}}'>{{page_num}}</a></li>
+          {% if query_user %}
+            <li class="page-item active"><a class="page-link" href='?search={{query_user}}&amp;page={{page_num}}'>{{page_num}}</a></li>
+          {% else %}
+            <li class="page-item active"><a class="page-link" href='?page={{page_num}}'>{{page_num}}</a></li>
+          {% endif %}
         {% else %}
           {% if page_num <= students.paginator.num_pages %}
-            <li class="page-item"><a class="page-link" href='?page={{page_num}}'>{{page_num}}</a></li>
+            {% if query_user %}
+              <li class="page-item"><a class="page-link" href='?search={{query_user}}&amp;page={{page_num}}'>{{page_num}}</a></li>
+            {% else %}
+              <li class="page-item"><a class="page-link" href='?page={{page_num}}'>{{page_num}}</a></li>
+            {% endif %}
           {% endif %}
         {% endif %}
       {% endfor %}
       <li class="page-item">
         {% if students.has_next %}
-          <a class="page-link" href='?page={{students.next_page_number}}' aria-label="Next">Next</a>
+          {% if query_user %}
+            <a class="page-link" href='?search={{query_user}}&amp;page={{students.next_page_number}}' aria-label="Next">Next</a>
+          {% else %}
+            <a class="page-link" href='?page={{students.next_page_number}}' aria-label="Next">Next</a>
+          {% endif %}
         {% endif %}
      </li>
   </ul>
