Show left navigation menu only when a user clicks on a course
The left navigation menu should appear only when a user clicks on a course. Student overview page should not have the left nav as it has the same content as the page. Clicking on the student's name in a course page takes the user to the student overview page.

--- a/seumich/templates/seumich/student_detail.html
+++ b/seumich/templates/seumich/student_detail.html
@@ -1,6 +1,6 @@
 {% load filters %}
 
-<h2 class="student-detail-summary-title">STUDENT SUMMARY</h2>
+<h2 class="student-detail-summary-title">Student Summary</h2>
 <hr class="main-no-margin-top" />
 <div class="student-detail-summary-content">{% include 'seumich/student_class_site_list.html' %}</div>
 <div class="student-info">
