--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -17,11 +17,12 @@
 
     <div class="student-detail-left-menu" id="student-detail-menu">
         <div class="student-detail-left-menu-top">
-            <p class="student-detail-student-name">{{student.first_name}} {{student.last_name}}</p>
+            <p class="student-detail-student-name"><a class="student-detail-student-name-link" href="/students/{{student.username}}/">{{student.first_name}} {{student.last_name}}</a></p>
+            <p class="student-detail-student-id">Student ID: {{ student.univ_id }}</p>
             <p class="student-detail-student-email"><a href="mailto:{{student.email_address}}" class="student-detail-student-email-link">{{student.email_address}}</a></p>
         </div>
         <div class="student-detail-left-menu-course-line">
-            <p>STUDENT SUMMARY</p>
+            <p>Course List:</p>
             <input type="hidden" id="student-username" value="{{ student.username }}">
         </div>
         {% for classSite in classSites %}
