UI Changes to student course site detail page
Make the selected div highlighted in the left nav, Make space between left nav and assignment table, Make space between course heading and status icon

--- a/seumich/static/styles/main.css
+++ b/seumich/static/styles/main.css
@@ -206,7 +206,6 @@ th[scope="row"] {
 
 .student-detail-left-menu-courses:hover {
     cursor: pointer;
-    background-color: #CCCCCC;
 }
 
 .student-detail-summary {
@@ -247,6 +246,10 @@ th[scope="row"] {
 
 .advisor-names {
   margin-right: .4em;
+}
+
+.assignment-table {
+    margin-left: 10px;
 }
 
 /* For student_class_site_detail template */
