--- a/seumich/templates/seumich/student_class_site_detail.html
+++ b/seumich/templates/seumich/student_class_site_detail.html
@@ -40,8 +40,9 @@
             <div class="row no-margin">
                 <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                     <h3 class="main-h3">Course Site: {{ classSite.description }}
+                    <input type="hidden" id="current-classsite-code" value="{{ classSite.code }}">
                       <span data-toggle="tooltip" title="{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite|status_to_text }}" data-placement="bottom">
-                      <img src="{{ baseUrl }}/images/Status_Icons_{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite }}.png" width="25px"></img></span>
+                      <img src="{{ baseUrl }}/images/Status_Icons_{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite }}.png" width="25px" hspace="10"></img></span>
                     </h3>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
