--- a/seumich/templates/seumich/student_class_site_list.html
+++ b/seumich/templates/seumich/student_class_site_list.html
@@ -1,12 +1,55 @@
+{% load filters %}
+
 <div>
     {% if not classSites %}
     <div>
         <p>There is no class site data for this student.</p>
     </div>
     {% else %}
-    <div class="table-responsive">
-        <div class="student-class-site-table">{% include 'seumich/student_class_site_list_table.html' %}</div>
-        <div class="student-class-site-list">{% include 'seumich/student_class_site_list_list.html' %}</div>
+    <div class="container-fluid">
+        <div class="row hide-small-grid">
+            <div class="col-md-2"><strong><a href="#" onClick="return false;">Course Site</a></strong></div>
+            <div class="col-md-2"><strong><a href="#" onClick="return false;">Status</a></strong></div>
+            <div class="col-md-8"><strong><a href="#" onClick="return false;">Current Percentage</a></strong></div>
+        </div>
+        <hr class="main-no-margin-top hide-small-grid" />
+        </strong>
+        <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-2">
+                <p class="legend-text"><span class="legend-key student-legend-key"></span>Student</p>
+            </div>
+            <div class="col-md-2">
+                <p class="legend-text"><span class="legend-key class-legend-key"></span>Class Average</p>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        {% for classSite in classSites %}
+        <hr class="main-no-margin-top hide-small-grid" />
+        <div class="row student-desc">
+            <div class="col-md-2"><a class="class-site-title" href="/students/{{student.username}}/class_sites/{{classSite.code}}/">{{ classSite.description }}</a></div>
+            <div class="col-md-2 status-icon">
+                {% load static %} {% static "" as baseUrl %}
+                <span data-toggle="tooltip" title="{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite|status_to_text }}" data-placement="bottom">
+               <img src="{{ baseUrl }}/images/Status_Icons_{{ student.studentclasssitestatus_set.all|get_student_class_status:classSite }}.png" width="25px" hspace="3"></img></span>
+            </div>
+            <div class="col-md-8">
+                <div class="average-bar-container">
+                    <div class="average-bar student-average-bar" role="progressbar" aria-valuenow="{{ student.studentclasssitescore_set.all|get_student_score:classSite }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ student.studentclasssitescore_set.all|get_student_score:classSite }}%;">
+                        <p class="average-bar-text">{{ student.studentclasssitescore_set.all|get_student_score:classSite }}%</p>
+                        <span class="sr-only">Student Percentage: {{ student.studentclasssitescore_set.all|get_student_score:classSite }}%</span>
+                    </div>
+                </div>
+                <div class="average-bar-container">
+                    <div class="average-bar class-average-bar" role="progressbar" aria-valuenow="{{ classSite.classsitescore_set.all|get_class_score }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ classSite.classsitescore_set.all|get_class_score }}%;">
+                        <p class="average-bar-text">{{ classSite.classsitescore_set.all|get_class_score }}%</p>
+                        <span class="sr-only">Class Average Percentage: {{ classSite.classsitescore_set.all|get_class_score }}%</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
     {% endif %}
 </div>
