--- a/seumich/templates/seumich/student_class_site_list.html
+++ b/seumich/templates/seumich/student_class_site_list.html
@@ -8,9 +8,9 @@
     {% else %}
     <div class="container-fluid">
         <div class="row hide-small-grid">
-            <div class="col-md-2"><strong><a href="#" onClick="return false;">Course Site</a></strong></div>
-            <div class="col-md-2"><strong><a href="#" onClick="return false;">Status</a></strong></div>
-            <div class="col-md-8"><strong><a href="#" onClick="return false;">Current Percentage</a></strong></div>
+            <div class="col-md-2"><strong class="table-column-name">Course Site</strong></div>
+            <div class="col-md-2"><strong class="table-column-name">Status</strong></div>
+            <div class="col-md-8"><strong class="table-column-name">Current Percentage</strong></div>
         </div>
         <hr class="main-no-margin-top hide-small-grid" />
         </strong>
